--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ stages:
 docker-build:
   stage: package
   script:
-    - docker build -t $REGISTRY_HOST/strm/apache .
-    - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN $REGISTRY_HOST
-    - docker push $REGISTRY_HOST/strm/apache
+      - docker build -t registry.thestorm.com.br:4567/strm/apache .
+    - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN registry.thestorm.com.br:4567
+    - docker push registry.thestorm.com.br:4567/strm/apache
 
