--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,13 +1,12 @@
-variables:
-  DOCKER_DRIVER: overlay
-
 stages:
-  - package
+    - build
 
-docker-build:
-  stage: package
+build:
+  stage: build
   script:
-    - docker build -t registry.thestorm.com.br:4567/strm/apache .
-    - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN registry.thestorm.com.br:4567
-    - docker push registry.thestorm.com.br:4567/strm/apache
-
+    - export IMAGE_TAG=$(echo -en $CI_BUILD_REF_NAME | tr -c '[:alnum:]_.-' '-' | sed 's/master/latest/g')
+    - docker login -u "gitlab-ci-token" -p "$CI_BUILD_TOKEN" $CI_REGISTRY
+    - docker build --pull -t "$CI_REGISTRY_IMAGE:$IMAGE_TAG" .
+    - docker push "$CI_REGISTRY_IMAGE:$IMAGE_TAG"
+  tags:
+    - docker
